--- a/connectWithAssistant.html
+++ b/connectWithAssistant.html
@@ -12,7 +12,6 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
         }
         #chat-container {
             width: 100%;
@@ -27,26 +26,14 @@
             overflow-y: auto;
             padding: 10px;
             border: 1px solid #ddd;
-            background: #fff;
         }
         .message {
             padding: 10px;
             border-radius: 5px;
             margin: 5px 0;
-            max-width: 80%;
         }
-        .user-message {
-            background: #007bff;
-            color: white;
-            text-align: right;
-            align-self: flex-end;
-            margin-left: auto;
-        }
-        .ai-message {
-            background: #ddd;
-            text-align: left;
-            align-self: flex-start;
-        }
+        .user-message { background: #007bff; color: white; text-align: right; }
+        .ai-message { background: #ddd; text-align: left; }
         #input-container {
             display: flex;
             margin-top: 10px;
@@ -64,76 +51,79 @@
             border: none;
             cursor: pointer;
             margin-left: 10px;
-            border-radius: 5px;
         }
     </style>
     <script>
-        let threadId = localStorage.getItem("threadId") || null;
-        let chatHistory = JSON.parse(localStorage.getItem("chatHistory")) || [];
+    let threadId = localStorage.getItem("threadId") || null;
 
-        function renderChatHistory() {
-            const chatBox = document.getElementById("chat-box");
-            chatBox.innerHTML = "";
-            chatHistory.forEach(({ sender, text }) => appendMessage(sender, text, false));
-            chatBox.scrollTop = chatBox.scrollHeight;
-        }
+    async function sendMessage() {
+        const userInput = document.getElementById("user-input").value.trim();
+        if (!userInput) return;
 
-        async function sendMessage() {
-            const userInput = document.getElementById("user-input").value.trim();
-            if (!userInput) return;
+        const sendBtn = document.getElementById("send-btn");
+        sendBtn.disabled = true;
+        appendMessage("user", userInput);
+        document.getElementById("user-input").value = "";
 
-            document.getElementById("send-btn").disabled = true;
-            appendMessage("user", userInput);
-            document.getElementById("user-input").value = "";
+        let attempts = 3; // Retry 3 times
+        let success = false;
 
+        while (attempts > 0 && !success) {
             try {
+                const controller = new AbortController();
+                const timeoutId = setTimeout(() => controller.abort(), 15000);
+
                 const response = await fetch("/api/openai", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({ userMessage: userInput, threadId }),
+                    signal: controller.signal,
                 });
 
+                clearTimeout(timeoutId);
+
                 if (!response.ok) {
-                    throw new Error(`Server error: ${response.status} - ${response.statusText}`);
+                    throw new Error(Server error: ${response.status} - ${response.statusText});
                 }
 
                 const data = await response.json();
-                threadId = data.threadId;
+                threadId = data.threadId || threadId;
                 localStorage.setItem("threadId", threadId);
 
                 appendMessage("ai", data.result || "No response from AI.");
+                success = true;
             } catch (error) {
-                appendMessage("ai", "Error: Server is not responding. Please try again later.");
                 console.error("Chat Error:", error);
-            }
-
-            document.getElementById("send-btn").disabled = false;
-        }
-
-        function appendMessage(sender, text, save = true) {
-            const chatBox = document.getElementById("chat-box");
-            const messageDiv = document.createElement("div");
-            messageDiv.className = sender === "user" ? "message user-message" : "message ai-message";
-            messageDiv.textContent = text;
-            chatBox.appendChild(messageDiv);
-            chatBox.scrollTop = chatBox.scrollHeight;
-
-            if (save) {
-                chatHistory.push({ sender, text });
-                localStorage.setItem("chatHistory", JSON.stringify(chatHistory));
+                appendMessage("ai", Error: ${error.message}. Retrying...);
+                attempts--;
             }
         }
 
-        window.onload = renderChatHistory;
-    </script>
+        if (!success) {
+            appendMessage("ai", "Error: Server is not responding. Please try again later.");
+        }
+
+        sendBtn.disabled = false;
+    }
+
+    function appendMessage(sender, text) {
+        const chatBox = document.getElementById("chat-box");
+        const messageDiv = document.createElement("div");
+        messageDiv.className = sender === "user" ? "message user-message" : "message ai-message";
+        messageDiv.textContent = text;
+        chatBox.appendChild(messageDiv);
+        chatBox.scrollTop = chatBox.scrollHeight;
+    }
+</script>
+
 </head>
 <body>
-    <div id="chat-container">
-        <div id="chat-box"></div>
-        <div id="input-container">
-            <input type="text" id="user-input" placeholder="Type a message...">
-            <button id="send-btn" onclick="sendMessage()">Send</button>
-        </div>
+<div id="chat-container">
+    <div id="chat-box"></div>
+    <div id="input-container">
+        <input type="text" id="user-input" placeholder="Type a message...">
+        <button id="send-btn" onclick="sendMessage()">Send</button>
     </div>
+</div>
 </body>
 </html>
