--- a/connectWithAssistant.html
+++ b/connectWithAssistant.html
@@ -5,53 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Chat Assistant</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f4f4f4;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        #chat-container {
-            width: 100%;
-            max-width: 500px;
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-        }
-        #chat-box {
-            height: 400px;
-            overflow-y: auto;
-            padding: 10px;
-            border: 1px solid #ddd;
-        }
-        .message {
-            padding: 10px;
-            border-radius: 5px;
-            margin: 5px 0;
-        }
+        body { font-family: Arial, sans-serif; background: #f4f4f4; text-align: center; }
+        #chat-container { width: 500px; margin: auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); }
+        #chat-box { height: 400px; overflow-y: auto; border: 1px solid #ddd; padding: 10px; }
+        .message { padding: 10px; margin: 5px; border-radius: 5px; }
         .user-message { background: #007bff; color: white; text-align: right; }
         .ai-message { background: #ddd; text-align: left; }
-        #input-container {
-            display: flex;
-            margin-top: 10px;
-        }
-        #user-input {
-            flex: 1;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        #send-btn {
-            padding: 10px;
-            background: #007bff;
-            color: white;
-            border: none;
-            cursor: pointer;
-            margin-left: 10px;
-        }
+        #user-input { width: 80%; padding: 10px; border: 1px solid #ccc; border-radius: 5px; }
+        #send-btn { padding: 10px; background: #007bff; color: white; border: none; cursor: pointer; margin-left: 10px; }
     </style>
     <script defer>
         let threadId = localStorage.getItem("threadId") || null;
@@ -60,69 +21,37 @@
             const userInput = document.getElementById("user-input").value.trim();
             if (!userInput) return;
 
-            const sendBtn = document.getElementById("send-btn");
-            sendBtn.disabled = true;
             appendMessage("user", userInput);
             document.getElementById("user-input").value = "";
+            appendMessage("ai", "Thinking...");
 
-            let attempts = 3; // Retry 3 times
-            let success = false;
+            try {
+                const response = await fetch("/api/openai", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ userMessage: userInput, threadId }),
+                });
 
-            while (attempts > 0 && !success) {
-                try {
-                    const controller = new AbortController();
-                    const timeoutId = setTimeout(() => controller.abort(), 15000);
+                const data = await response.json();
+                threadId = data.threadId;
+                localStorage.setItem("threadId", threadId);
 
-                    const response = await fetch("/api/openai", {
-                        method: "POST",
-                        headers: { "Content-Type": "application/json" },
-                        body: JSON.stringify({ userMessage: userInput, threadId }),
-                        signal: controller.signal,
-                    });
-
-                    clearTimeout(timeoutId);
-
-                    if (!response.ok) {
-                        throw new Error(`Server error: ${response.status} - ${response.statusText}`);
-                    }
-
-                    const data = await response.json();
-                    threadId = data.threadId || threadId;
-                    localStorage.setItem("threadId", threadId);
-
-                    appendMessage("ai", data.result || "No response from AI.");
-                    success = true;
-                } catch (error) {
-                    console.error("Chat Error:", error);
-                    appendMessage("ai", `Error: ${error.message}. Retrying...`);
-                    attempts--;
-                }
+                appendMessage("ai", data.result || "No response.");
+            } catch (error) {
+                appendMessage("ai", "Error: Failed to communicate with AI.");
             }
-
-            if (!success) {
-                appendMessage("ai", "Error: Server is not responding. Please try again later.");
-            }
-
-            sendBtn.disabled = false;
         }
 
         function appendMessage(sender, text) {
-            const chatBox = document.getElementById("chat-box");
-            const messageDiv = document.createElement("div");
-            messageDiv.className = sender === "user" ? "message user-message" : "message ai-message";
-            messageDiv.textContent = text;
-            chatBox.appendChild(messageDiv);
-            chatBox.scrollTop = chatBox.scrollHeight;
+            document.getElementById("chat-box").innerHTML += `<div class="message ${sender}-message">${text}</div>`;
         }
     </script>
 </head>
 <body>
 <div id="chat-container">
     <div id="chat-box"></div>
-    <div id="input-container">
-        <input type="text" id="user-input" placeholder="Type a message...">
-        <button id="send-btn" onclick="sendMessage()">Send</button>
-    </div>
+    <input id="user-input" type="text" placeholder="Type a message...">
+    <button id="send-btn" onclick="sendMessage()">Send</button>
 </div>
 </body>
 </html>
