--- a/connectWithAssistant.html
+++ b/connectWithAssistant.html
@@ -1,18 +1,111 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Chat Assistant</title>
     <style>
-        body { font-family: Arial, sans-serif; background: #f4f4f4; text-align: center; }
-        #chat-container { width: 500px; margin: auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); }
-        #chat-box { height: 400px; overflow-y: auto; border: 1px solid #ddd; padding: 10px; }
-        .message { padding: 10px; margin: 5px; border-radius: 5px; }
-        .user-message { background: #007bff; color: white; text-align: right; }
-        .ai-message { background: #ddd; text-align: left; }
-        #user-input { width: 80%; padding: 10px; border: 1px solid #ccc; border-radius: 5px; }
-        #send-btn { padding: 10px; background: #007bff; color: white; border: none; cursor: pointer; margin-left: 10px; }
+        /* General Styles */
+        body { 
+            font-family: 'Poppins', sans-serif;
+            background: #f9f9fb;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        /* Chat Container */
+        #chat-container { 
+            width: 100%;
+            max-width: 450px;
+            background: #fff;
+            border-radius: 12px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            height: 80vh;
+        }
+
+        /* Chat Box */
+        #chat-box { 
+            flex-grow: 1;
+            overflow-y: auto;
+            padding: 15px;
+            border-bottom: 1px solid #ddd;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            scroll-behavior: smooth;
+        }
+
+        .message {
+            padding: 10px 15px;
+            border-radius: 20px;
+            max-width: 80%;
+            word-wrap: break-word;
+            font-size: 14px;
+        }
+
+        .user-message { 
+            background: #007bff;
+            color: white;
+            align-self: flex-end;
+        }
+
+        .ai-message { 
+            background: #f1f1f1;
+            align-self: flex-start;
+            color: #333;
+        }
+
+        /* Input Section */
+        .input-container {
+            display: flex;
+            padding: 12px;
+            background: #fff;
+            border-top: 1px solid #ddd;
+        }
+
+        #user-input { 
+            flex-grow: 1;
+            padding: 12px;
+            border: 1px solid #ddd;
+            border-radius: 25px;
+            font-size: 14px;
+            outline: none;
+            transition: border-color 0.3s;
+        }
+
+        #user-input:focus {
+            border-color: #007bff;
+        }
+
+        #send-btn { 
+            padding: 12px 18px;
+            background: #007bff;
+            color: white;
+            border: none;
+            border-radius: 25px;
+            cursor: pointer;
+            margin-left: 10px;
+            transition: background 0.3s;
+            font-size: 14px;
+        }
+
+        #send-btn:hover { 
+            background: #0056b3;
+        }
+
+        /* Responsive Design */
+        @media screen and (max-width: 500px) {
+            #chat-container {
+                width: 95%;
+                height: 90vh;
+            }
+        }
     </style>
     <script defer>
         let threadId = localStorage.getItem("threadId") || null;
